# coherence-py-client

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  DEVELOPING.md  Makefile  README.md  THIRD_PARTY_LICENSES.txt  aggregation.html  api_reference.html  basics.html  caches.html  entryprocessing.html  events.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  querying.html  requirements.txt  search.html  searchindex.js  serialization.html  sessions.html  setup.cfg  setup.py  sonar-project.properties
.doctrees/: aggregation.doctree  api_reference.doctree  basics.doctree  caches.doctree  entryprocessing.doctree  environment.pickle  events.doctree  index.doctree  installation.doctree  querying.doctree  serialization.doctree  sessions.doctree
.doctrees/api_reference/: aggregator.doctree  ai.doctree  comparator.doctree  event.doctree  extractor.doctree  filter.doctree  processor.doctree
.github/: dependabot.yml
.github/workflows/: doc-update.yml  release.yml  run-examples-with-release.yaml  run-examples.yaml  trivy-scan.yml  validate-nslookup.yml  validate.yml
_build/: .buildinfo  aggregation.html  api_reference.html  basics.html  entryprocessing.html  events.html  genindex.html  index.html  installation.html  objects.inv  querying.html  search.html  searchindex.js  serialization.html  sessions.html
_build/.doctrees/: aggregation.doctree  api_reference.doctree  basics.doctree  entryprocessing.doctree  environment.pickle  events.doctree  index.doctree  installation.doctree  querying.doctree  serialization.doctree  sessions.doctree
_build/.doctrees/api_reference/: aggregator.doctree  client.doctree  event.doctree  extractor.doctree  filter.doctree  processor.doctree
_build/_sources/: aggregation.rst.txt  api_reference.rst.txt  basics.rst.txt  events.rst.txt  installation.rst.txt  querying.rst.txt  sessions.rst.txt
_build/_sources/api_reference/: aggregator.rst.txt  extractor.rst.txt  filter.rst.txt  processor.rst.txt
_build/_static/: documentation_options.js
_build/api_reference/: aggregator.html  client.html  event.html  extractor.html  filter.html  processor.html
_sources/: caches.rst.txt  entryprocessing.rst.txt  events.rst.txt  querying.rst.txt  serialization.rst.txt
_sources/api_reference/: aggregator.rst.txt  event.rst.txt  extractor.rst.txt
api_reference/: aggregator.html  ai.html  comparator.html  event.html  extractor.html  filter.html  processor.html
coherence/: __init__.py  aggregator.py  client.py  comparator.py  event.py  extractor.py  filter.py  messages_pb2.py  processor.py  serialization.py  services_pb2.py  util.py
docs/: Makefile  aggregation.rst  api_reference.rst  basics.rst  caches.rst  conf.py  entryprocessing.rst  events.rst  index.rst  installation.rst  make.bat  querying.rst  sessions.rst
docs/api_reference/: ai.rst  client.rst  comparator.rst  event.rst  processor.rst
etc/proto/: cache_service_messages_v1.proto  common_messages_v1.proto  messages.proto  proxy_service_messages_v1.proto  proxy_service_v1.proto  services.proto
examples/: README.md  aggregators.py  basics.py  events.py  filters.py  near_caching.py  processors.py  python_object_keys_and_values.py  vector_search.py
examples/basic/: README.md  crud.py  python_object_keys.py  python_object_values.py
src/: __init__.py
src/coherence/: __init__.py  aggregator.py  ai.py  cache_service_messages_v1_pb2.py  cache_service_messages_v1_pb2.pyi  cache_service_messages_v1_pb2_grpc.py  client.py  client_v1.py  common_messages_v1_pb2.py  common_messages_v1_pb2.pyi  common_messages_v1_pb2_grpc.py  comparator.py  entry.py  error.py  event.py  extractor.py  filter.py  local_cache.py  messages_pb2.py  messages_pb2.pyi  messages_pb2_grpc.py  nslookup.py  processor.py  proxy_service_messages_v1_pb2.py  proxy_service_messages_v1_pb2.pyi  proxy_service_messages_v1_pb2_grpc.py  proxy_service_v1_pb2.py  proxy_service_v1_pb2.pyi  proxy_service_v1_pb2_grpc.py  serialization.py  services_pb2.py  services_pb2.pyi  services_pb2_grpc.py  util.py  util_v1.py
tests/: __init__.py  address.py  client_v1_test.py  conftest.py  logging.conf  mytest.py  newimpl_test.py  person.py  test_aggregators.py  test_ai.py  test_client.py  test_events.py  test_extractors.py  test_filters.py  test_processors.py  test_serialization.py  test_session.py
tests/e2e/: __init__.py  test_aggregators.py  test_ai.py  test_client.py  test_events.py  test_filters.py  test_near_caching.py  test_processors.py  test_session.py
tests/java/: pom.xml
tests/java/coherence-python-client-data-jakarta/: pom.xml
tests/java/coherence-python-client-data-jakarta/src/main/java/com/oracle/coherence/python/testing/: Address.java  Customer.java
tests/java/coherence-python-client-data-javax/: pom.xml
tests/java/coherence-python-client-data-javax/src/main/java/com/oracle/coherence/python/testing/: Address.java  Customer.java
tests/java/coherence-python-test/: pom.xml
tests/java/coherence-python-test/src/main/java/com/oracle/coherence/python/testing/: Address.java  Customer.java  LongRunningProcessor.java  RestServer.java  RunMe.java  SimpleCacheLoader.java  package-info.java
tests/java/coherence-python-test/src/main/resources/: test-cache-config.xml
tests/scripts/: keys.sh  run-tests.sh  startup-clusters.sh
tests/unit/: test_cache_options.py  test_environment.py  test_local_cache.py  test_serialization.py
tests/utils/: docker-compose-2-members.yaml
